geo-location/geo-fetcher/istio/envoyfilter.template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: wasm-geo-fetcher
  namespace: istio-ingress
spec:
  configPatches:
  - applyTo: BOOTSTRAP
    match:
      context: GATEWAY
    patch:
      operation: MERGE
      value:
        bootstrap_extensions:
        - name: envoy.bootstrap.wasm
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
            singleton: true
            config:
              name: wasm-geo-fetcher
              root_id: wasm-geo-fetcher-root-id
              configuration:
                "@type": type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "geo_db_url_path": "/free/dbip-country-lite-2023-09.mmdb.gz",
                    "polling_interval": 60000
                  }
              vm_config:
                vm_id: geo-fetcher
                runtime: "envoy.wasm.runtime.v8"
                code:
                  remote:
                    http_uri:
                      uri: "http://wasm-repo.wasm-repo.svc.cluster.local/wasm-plugins/geo-fetcher-0.1.wasm"
                      timeout: 600s
                      cluster: "wasm-repo"
                    sha256: "${wasm_plugin_sha256}"
  - applyTo: BOOTSTRAP
    patch:
      operation: MERGE
      value:
        static_resources:
          clusters:
          - name: "db-ip"
            connect_timeout: "60s"
            type: LOGICAL_DNS
            load_assignment:
              cluster_name: "db-ip"
              endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: download.db-ip.com
                        port_value: 443
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
                sni: download.db-ip.com
