geo-location/geo-fetcher/istio/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: wasm-geo-service
  namespace: istio-ingress
spec:
  configPatches:
  - applyTo: BOOTSTRAP
    match:
      context: GATEWAY
    patch:
      operation: MERGE
      value:
        bootstrap_extensions:
        - name: envoy.bootstrap.wasm
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
            singleton: true
            config:
              name: geo-service-plugin
              root_id: geo_service_root_id
              configuration:
                "@type": type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "geo_db_url_path": "/free/dbip-country-lite-2023-09.mmdb.gz",
                    "polling_interval": 3600000
                  }
              vm_config:
                runtime: "envoy.wasm.runtime.v8"
                code:
                  remote:
                    http_uri:
                      uri: "oci://docker.io/boeboe/envoy-wasm-plugins:geo-fetcher-0.1"
                      timeout: 600s
                      cluster: "docker-hub"
                    # Optional: Specify a sha256 checksum for verification
                    sha256: "y5bc353d5d7e362928a8c48aeed3850be06ba7cc8323d95d46853cd7ff5fac61a"
                    # Optional: Use this if your registry requires authentication
                    # credentials_ref: "your_secret_name"
  - applyTo: CLUSTER
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        name: "geo-db-cluster"
        connect_timeout: "0.5s"
        type: STRICT_DNS
        load_assignment:
          cluster_name: "geo-db-cluster"
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: download.db-ip.com
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: download.db-ip.com
  - applyTo: CLUSTER
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        name: "docker-hub"
        connect_timeout: 5s
        type: STRICT_DNS
        load_assignment:
          cluster_name: "docker-hub"
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: docker.io
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: docker.io
